--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -109,3 +109,13 @@ img
     border: black;
     border-radius: 5px;
 }
+
+.assignment-four
+{
+    width:25%;
+    margin:20px;
+    padding:15px 15px;
+    background-color: white;
+    border-radius: 10%;
+    background-color: #006d77;
+}
